# cli-anything-geonode

./: .gitignore  GEONODE.md  README.md  USER_GUIDE.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
cli_anything/geonode/: README.md  __init__.py  __main__.py  geonode_cli.py
cli_anything/geonode/core/: client.py  config.py  session.py
cli_anything/geonode/tests/: TEST.md  test_core.py  test_full_e2e.py
cli_anything/geonode/utils/: formatters.py  geonode_backend.py  repl_skin.py
