[project]
name = "cli-anything-geonode"
version = "1.0.0"
description = "CLI harness for GeoNode geospatial content management system"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "prompt-toolkit>=3.0.0",
    "requests>=2.28.0",
]

[project.scripts]
cli-anything-geonode = "cli_anything.geonode.geonode_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli_anything"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
